more task examples

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,20 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generative Jupyter\n",
-    "\n",
-    "Various \"generative ai\" tools which can be run inside a jupyter notebook and stitched together"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Setup / Installation\n",
     "\n",
-    "Most tools require Anaconda, as they are doing _more_ than just installing Python packages.  They often have base C libs / misc tools that need to be installed\n",
+    "<!-- Most tools require Anaconda, as they are doing _more_ than just installing Python packages.  They often have base C libs / misc tools that need to be installed\n",
     "\n",
-    "This is often the most painful part of ML / AI , in my experience ...\n",
+    "This is often the most painful part of ML / AI , in my experience ... -->\n",
     "\n",
     "### Install Jupyter / Get started on Jupyter Labs\n",
     "\n",
@@ -594,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
