--- a/index.ipynb
+++ b/index.ipynb
@@ -7,22 +7,21 @@
     "# Overview\n",
     "\n",
     "- What is \"Hugging Face 🤗\"\n",
+    "    - https://huggingface.co\n",
     "- What are Transformers?\n",
+    "    - Let's look through a `pipeline` [transformers_pipeline](./transformers_pipeline.ipynb)\n",
     "- What are common ML/AI _Tasks_ https://huggingface.co/tasks\n",
-    "    - [Computer Vision](...)\n",
-    "- What are _not_ Transformers?  (Diffusers, Tokenizers,"
+    "    - [Natural Language Processing](./natural_language_processing.ipynb)\n",
+    "    - [Computer Vision](./computer_vision.ipynb)\n",
+    "        - [Diffusion](./diffusion.ipynb) \n",
+    "    - [Multi Modal](./multi_modal.ipynb)\n",
+    "- Extras\n",
+    "    - [Datasets](./datasets.ipynb)\n",
+    "    - Hosting \"Spaces\" on Hugging Face\n",
+    "        - https://huggingface.co/spaces/redtwoon/demo-space\n",
+    "    - Training / Fine-Tuning Models\n",
+    "        - https://huggingface.co/learn/nlp-course/chapter3/3?fw=pt"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
