--- a/transformers_pipeline.ipynb
+++ b/transformers_pipeline.ipynb
@@ -49,6 +49,17 @@
       "No model was supplied, defaulted to sshleifer/distilbart-cnn-12-6 and revision a4f8f3e (https://huggingface.co/sshleifer/distilbart-cnn-12-6).\n",
       "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'model': 'sshleifer/distilbart-cnn-12-6',\n",
+       " 'tokenizer': 'sshleifer/distilbart-cnn-12-6'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +156,7 @@
        " 'tokenizer': 'sshleifer/distilbart-cnn-12-6'}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -264,13 +275,13 @@
        "           479,     2]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "o# Generate Summary\n",
+    "# Generate Summary\n",
     "summary_ids = model.generate(inputs[\"input_ids\"])\n",
     "\n",
     "summary_ids"
@@ -278,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
