--- a/environment_setup.ipynb
+++ b/environment_setup.ipynb
@@ -27,32 +27,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 2512\n",
-      "drwxr-xr-x   3 davidhuvr  staff      96 Sep 19 17:01 \u001b[1m\u001b[36maudio\u001b[m\u001b[m/\n",
-      "-rw-r--r--   1 davidhuvr  staff  558078 Oct 11 11:22 audio.ipynb\n",
-      "-rw-r--r--   1 davidhuvr  staff    5492 Oct 11 11:23 computer_vision.ipynb\n",
-      "-rw-r--r--   1 davidhuvr  staff    1698 Oct 11 11:28 diffusion.ipynb\n",
-      "-rw-r--r--   1 davidhuvr  staff    3411 Oct 11 11:29 environment_setup.ipynb\n",
-      "-rw-r--r--   1 davidhuvr  staff     770 Oct 11 10:36 index.ipynb\n",
-      "drwxr-xr-x   2 davidhuvr  staff      64 Oct  9 16:41 \u001b[1m\u001b[36minputs\u001b[m\u001b[m/\n",
-      "-rw-r--r--   1 davidhuvr  staff  670612 Oct 11 10:58 multi_modal.ipynb\n",
-      "-rw-r--r--   1 davidhuvr  staff   16237 Oct 11 10:54 natural_language_processing.ipynb\n",
-      "drwxr-xr-x   8 davidhuvr  staff     256 Oct  9 16:40 \u001b[1m\u001b[36moutput\u001b[m\u001b[m/\n",
-      "drwxr-xr-x  13 davidhuvr  staff     416 Oct 11 11:28 \u001b[1m\u001b[36mstatic\u001b[m\u001b[m/\n",
-      "drwxr-xr-x  20 davidhuvr  staff     640 Sep 19 16:39 \u001b[1m\u001b[36mtraffic-captcha\u001b[m\u001b[m/\n",
-      "-rw-r--r--   1 davidhuvr  staff   14590 Oct 11 10:00 transformers_pipeline.ipynb\n"
+      "\n",
+      "Usage:   \n",
+      "  /Users/davidhuvr/.pyenv/versions/3.11.5/envs/3.11.5-huggingface/bin/python -m pip <command> [options]\n",
+      "\n",
+      "Commands:\n",
+      "  install                     Install packages.\n",
+      "  download                    Download packages.\n",
+      "  uninstall                   Uninstall packages.\n",
+      "  freeze                      Output installed packages in requirements format.\n",
+      "  inspect                     Inspect the python environment.\n",
+      "  list                        List installed packages.\n",
+      "  show                        Show information about installed packages.\n",
+      "  check                       Verify installed packages have compatible dependencies.\n",
+      "  config                      Manage local and global configuration.\n",
+      "  search                      Search PyPI for packages.\n",
+      "  cache                       Inspect and manage pip's wheel cache.\n",
+      "  index                       Inspect information available from package indexes.\n",
+      "  wheel                       Build wheels from your requirements.\n",
+      "  hash                        Compute hashes of package archives.\n",
+      "  completion                  A helper command used for command completion.\n",
+      "  debug                       Show information useful for debugging.\n",
+      "  help                        Show help for commands.\n",
+      "\n",
+      "General Options:\n",
+      "  -h, --help                  Show help.\n",
+      "  --debug                     Let unhandled exceptions propagate outside the\n",
+      "                              main subroutine, instead of logging them to\n",
+      "                              stderr.\n",
+      "  --isolated                  Run pip in an isolated mode, ignoring\n",
+      "                              environment variables and user configuration.\n",
+      "  --require-virtualenv        Allow pip to only run in a virtual environment;\n",
+      "                              exit with an error otherwise.\n",
+      "  --python <python>           Run pip with the specified Python interpreter.\n",
+      "  -v, --verbose               Give more output. Option is additive, and can be\n",
+      "                              used up to 3 times.\n",
+      "  -V, --version               Show version and exit.\n",
+      "  -q, --quiet                 Give less output. Option is additive, and can be\n",
+      "                              used up to 3 times (corresponding to WARNING,\n",
+      "                              ERROR, and CRITICAL logging levels).\n",
+      "  --log <path>                Path to a verbose appending log.\n",
+      "  --no-input                  Disable prompting for input.\n",
+      "  --keyring-provider <keyring_provider>\n",
+      "                              Enable the credential lookup via the keyring\n",
+      "                              library if user input is allowed. Specify which\n",
+      "                              mechanism to use [disabled, import, subprocess].\n",
+      "                              (default: disabled)\n",
+      "  --proxy <proxy>             Specify a proxy in the form\n",
+      "                              scheme://[user:passwd@]proxy.server:port.\n",
+      "  --retries <retries>         Maximum number of retries each connection should\n",
+      "                              attempt (default 5 times).\n",
+      "  --timeout <sec>             Set the socket timeout (default 15 seconds).\n",
+      "  --exists-action <action>    Default action when a path already exists:\n",
+      "                              (s)witch, (i)gnore, (w)ipe, (b)ackup, (a)bort.\n",
+      "  --trusted-host <hostname>   Mark this host or host:port pair as trusted,\n",
+      "                              even though it does not have valid or any HTTPS.\n",
+      "  --cert <path>               Path to PEM-encoded CA certificate bundle. If\n",
+      "                              provided, overrides the default. See 'SSL\n",
+      "                              Certificate Verification' in pip documentation\n",
+      "                              for more information.\n",
+      "  --client-cert <path>        Path to SSL client certificate, a single file\n",
+      "                              containing the private key and the certificate\n",
+      "                              in PEM format.\n",
+      "  --cache-dir <dir>           Store the cache data in <dir>.\n",
+      "  --no-cache-dir              Disable the cache.\n",
+      "  --disable-pip-version-check\n",
+      "                              Don't periodically check PyPI to determine\n",
+      "                              whether a new version of pip is available for\n",
+      "                              download. Implied with --no-index.\n",
+      "  --no-color                  Suppress colored output.\n",
+      "  --no-python-version-warning\n",
+      "                              Silence deprecation warnings for upcoming\n",
+      "                              unsupported Pythons.\n",
+      "  --use-feature <feature>     Enable new functionality, that may be backward\n",
+      "                              incompatible.\n",
+      "  --use-deprecated <feature>  Enable deprecated functionality, that will be\n",
+      "                              removed in the future.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%ls -l"
+    "%pip --help"
    ]
   },
   {
@@ -61,45 +124,7 @@
    "source": [
     "## Install Hugging Face Packages\n",
     "\n",
-    "![](https://avatars.githubusercontent.com/u/25720743?s=200&v=4)\n",
-    "\n",
-    "### Transformers\n",
-    "\n",
-    "https://github.com/huggingface/transformers\n",
-    "\n",
-    "> Transformers provides thousands of pretrained models to \n",
-    ">\n",
-    "> perform tasks on different modalities such as text, vision, and audio.\n",
-    "\n",
-    "```sh\n",
-    "pip install transformers\n",
-    "```\n",
-    "\n",
-    "### Diffusers\n",
-    "\n",
-    "https://github.com/huggingface/diffusers\n",
-    "\n",
-    "> Diffusers is the go-to library for state-of-the-art pretrained diffusion models for\n",
-    ">\n",
-    ">   generating images, audio, and even 3D structures of molecules\n",
-    "\n",
-    "```sh\n",
-    "pip install --upgrade diffusers[torch]\n",
-    "```\n",
-    "\n",
-    "### Datasets\n",
-    "\n",
-    "https://github.com/huggingface/datasets\n",
-    "\n",
-    "> Datasets is a lightweight library providing two main features:\n",
-    ">\n",
-    ">   one-line dataloaders for many public datasets\n",
-    ">\n",
-    ">   efficient data pre-processing\n",
-    "\n",
-    "```sh\n",
-    "pip install datasets\n",
-    "```"
+    "![](https://avatars.githubusercontent.com/u/25720743?s=200&v=4)\n"
    ]
   },
   {
